[package]
name = "twellik"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexed_db_futures = { version = "0.4.1", features = ["nightly"] }
js-sys = "0.3.65"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.107"
thiserror = "1.0.50"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.65", features = ["IdbRequest", "Window", "IdbFactory", "IdbOpenDbRequest", "IdbRequestReadyState"] }
