[package]
name = "twellik"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
hnsw = "0.11.0"
indexed_db_futures = { version = "0.4.1", default-features = false }
js-sys = "0.3.65"
rand_pcg = "0.3.1"
rkyv = { version = "0.7.42", features = ["validation"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.107"
space = "0.17.0"
thiserror = "1.0.50"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", features = ["IdbRequest", "Window", "IdbFactory", "IdbOpenDbRequest", "IdbRequestReadyState"] }
